--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+* {
+  text-decoration: none;
+}
+
 html {
   font-size: 65.8%;
 }
@@ -18,6 +22,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-decoration: none;
 }
 
 code {
