--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
+@font-face {
+  font-family: 'RobotoSlab';
+  font-style: normal;
+  font-weight: normal;
+  src: url('./fonts/RobotoSlab.ttf');
+}
+
+@font-face {
+  font-family: 'Ubuntu';
+  font-style: normal;
+  font-weight: normal;
+  src: url('./fonts/Ubuntu.ttf');
+}
+
 .App {
   background: black;
 }
@@ -8,7 +22,18 @@ main {
 
 .header {
   padding: 2rem;
-  box-shadow: 0 3px 9px #ffffff5c;
+  padding-bottom: 8rem;
+  background: linear-gradient(rgba(0, 0, 0, 0.3) 10%, rgba(0, 0, 0, 1) 90%), url(./assets/earth.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.web-title {
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 3rem;
+  font-weight: 600;
+  color: white;
+  text-align: center;
 }
 
 .country {
@@ -18,6 +43,15 @@ main {
 
 .light-bg {
   background-color: transparent;
+}
+
+.country-name {
+  font-family: 'RobotoSlab', sans-serif;
+}
+
+.capital-name {
+  font-size: 1.2rem;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .country-name,
@@ -42,7 +76,7 @@ main {
   position: absolute;
   left: 5px;
   top: 1.2rem;
-  width: 20rem;
+  width: 30rem;
   overflow-y: scroll;
   overflow-x: hidden;
 }
@@ -69,9 +103,10 @@ main {
 
 .input {
   width: 100%;
+  height: 3.2rem;
   background-color: #201e2ea7;
   padding: 5px;
-  border: solid 1px white;
+  border: solid 0.5px #ffffff89;
   outline: none;
   caret-color: white;
   color: white;
@@ -79,23 +114,25 @@ main {
 
 .input::placeholder {
   color: white;
+  font-size: 1rem;
+  font-weight: 500;
 }
 
 .province:nth-child(odd) {
-  background-color: #201e2ea7;
+  background-color: #171523bb;
 }
 
 .province:nth-child(even) {
-  background-color: #262626ec;
+  background-color: #141f2db7;
 }
 
 @media (max-width: 768px) {
   .search-container {
-    width: 15rem;
+    width: 20rem;
     right: 20%;
   }
 
   .light-bg {
-    background-color: #474747a9;
+    background-color: #2a2a2aa9;
   }
 }
